--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # Custom base url for OpenAI API. default: https://api.openai.com
 OPENAI_API_BASE_URL=https://api.openai.com
 # Custom OpenAI API Key
-OPENAI_API_KEY=
+OPENAI_API_KEY="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"
 # Provide proxy for OpenAI API. e.g. http://127.0.0.1:7890
 HTTPS_PROXY=
 # Secret string for the project. Use for generating signatures for API calls
-SECRET_KEY=
+SECRET_KEY=123456
 # Custom head scripts.
 HEAD_SCRIPTS=
 
