--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Custom base url for OpenAI API. default: https://api.openai.com
 OPENAI_API_BASE_URL=https://api.openai.com
 # Custom OpenAI API Key
-OPENAI_API_KEY=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
+OPENAI_API_KEY="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"
 # Provide proxy for OpenAI API. e.g. http://127.0.0.1:7890
 HTTPS_PROXY=
 # Secret string for the project. Use for generating signatures for API calls
